Redirection to ZI website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-Page coming soon
+<meta http-equiv="refresh" content="1; URL=https://www.zi-mannheim.de/en/research/departments-research-groups-institutes/theor-neuroscience-e/information-computational-neuroscience-e.html">
