--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -11,11 +11,11 @@
 	<atom:link href="http://OFFLINEZIP.wpshocomments/feed/" rel="self" type="application/rss+xml" />
 	<link>http://OFFLINEZIP.wpsho</link>
 	<description>Durstewitz Lab</description>
-	<lastBuildDate>2020-06-02 16:11:24</lastBuildDate>
+	<lastBuildDate>Thu, 12 Aug 2021 15:09:02 +0000</lastBuildDate>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
 	<sy:updateFrequency>
 	1	</sy:updateFrequency>
-	<generator>https://wordpress.org/?v=5.2.7</generator>
+	<generator>https://wordpress.org/?v=5.5.5</generator>
 </channel>
 </rss>
