--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -8,8 +8,8 @@
 <channel>
 	<title>
 	Comments for Theoretical Neuroscience@CIMH	</title>
-	<atom:link href="http://OFFLINEZIP.wpshocomments/feed/" rel="self" type="application/rss+xml" />
-	<link>http://OFFLINEZIP.wpsho</link>
+	<atom:link href="https://durstewitzlab.github.io/comments/feed/" rel="self" type="application/rss+xml" />
+	<link>http://durstewitzlab.github.io/</link>
 	<description>Durstewitz Lab</description>
 	<lastBuildDate>Wed, 29 May 2024 14:37:00 +0000</lastBuildDate>
 	<sy:updatePeriod>
