--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -8,10 +8,10 @@
 <channel>
 	<title>
 	Comments for Theoretical Neuroscience@CIMH	</title>
-	<atom:link href="https://durstewitzlab.github.io/comments/feed/" rel="self" type="application/rss+xml" />
-	<link>http://durstewitzlab.github.io/</link>
+	<atom:link href="http://OFFLINEZIP.wpshocomments/feed/" rel="self" type="application/rss+xml" />
+	<link>http://OFFLINEZIP.wpsho</link>
 	<description>Durstewitz Lab</description>
-	<lastBuildDate>Wed, 29 May 2024 14:37:00 +0000</lastBuildDate>
+	<lastBuildDate>Thu, 30 Jan 2025 10:39:55 +0000</lastBuildDate>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
 	<sy:updateFrequency>
