--- a/members/index.html
+++ b/members/index.html
@@ -76,7 +76,7 @@ var wpgmza_google_api_status={"message":"Engine is not google-maps","code":"ENGI
 
 <p>
 	Niklas Thorsson<br>
-	Sámuel Szajbéli<br>
+	Sámuel Szajbély<br>
 	Marcel Morr<br>
 	Noah Kriesch<br>
 	Markus Fahrländer<br>
@@ -102,6 +102,7 @@ var wpgmza_google_api_status={"message":"Engine is not google-maps","code":"ENGI
 	<a href="https://www.zi-mannheim.de/forschung/personen/person/20142.html">Janik Fechtelpeter</a><br>
 	Marc Pritsch<br>
 	<a href="https://zmonfared.github.io/DSAIlab/">Dr. Zahra Monfared</a><br>
+	<a href="https://humml.iwr.uni-heidelberg.de/">Prof. Dr. Georgia Koppe</a>
 	Dr. Han Cao<br>
 	<a href="https://www.zi-mannheim.de/forschung/personen/person/9985.html">Sadjad Sadeghi</a><br>
 	<a href="http://www.zi-mannheim.de/forschung/personen/person/5184.html">Dr. Florian Bähner</a><br>
